[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/sprites/ship.png" type="Texture" id=1]
[ext_resource path="res://assets/sprites/editor/turret_enemy.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/editor/basic_enemy.png" type="Texture" id=3]
[ext_resource path="res://scenes/WaveEditor.gd" type="Script" id=4]
[ext_resource path="res://assets/sprites/ui/cancel.png" type="Texture" id=5]

[node name="Editor" type="Node2D"]
script = ExtResource( 4 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="CollisionRepresentation" type="Line2D" parent="."]
points = PoolVector2Array( 256, -144, 256, 144, -256, 144, -256, -144, 261, -144 )

[node name="Sprite" type="Sprite" parent="CollisionRepresentation"]
position = Vector2( 0, 8 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )
hframes = 3

[node name="UI" type="Control" parent="."]
margin_left = -512.0
margin_top = -288.0
margin_right = 512.0
margin_bottom = 288.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="UI"]
anchor_top = 0.852
anchor_right = 0.833
anchor_bottom = 1.0
margin_top = 29.248
margin_right = 0.00793457
follow_focus = true
scroll_vertical_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnemySelect" type="HBoxContainer" parent="UI/ScrollContainer"]
margin_right = 116.0
margin_bottom = 56.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Basic" type="Button" parent="UI/ScrollContainer/EnemySelect"]
margin_right = 56.0
margin_bottom = 56.0
rect_min_size = Vector2( 56, 56 )
icon = ExtResource( 3 )
expand_icon = true

[node name="Turret" type="Button" parent="UI/ScrollContainer/EnemySelect"]
margin_left = 60.0
margin_right = 116.0
margin_bottom = 56.0
rect_min_size = Vector2( 56, 56 )
icon = ExtResource( 2 )
expand_icon = true

[node name="LevelName" type="TextEdit" parent="UI"]
anchor_left = 0.834
anchor_top = 0.852
anchor_right = 0.917
anchor_bottom = 0.906
margin_left = -0.0160522
margin_top = 0.247955
margin_right = -0.00805664
margin_bottom = 0.143982
text = "Level"
caret_block_mode = true
caret_blink = true
caret_moving_by_right_click = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WaveName" type="TextEdit" parent="UI"]
anchor_left = 0.917
anchor_top = 0.852
anchor_right = 1.0
anchor_bottom = 0.906
margin_left = -0.00805664
margin_top = 0.247955
margin_bottom = 0.143982
text = "Wave"
caret_block_mode = true
caret_blink = true
caret_moving_by_right_click = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveWave" type="Button" parent="UI"]
anchor_left = 0.917
anchor_top = 0.906
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -0.00805664
margin_top = 0.143982
text = "Save Wave"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveLevel" type="Button" parent="UI"]
anchor_left = 0.833
anchor_top = 0.906
anchor_right = 0.917
anchor_bottom = 1.0
margin_left = 1.00793
margin_top = 0.143982
margin_right = -0.00805664
text = "Waveset"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="UI"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Backdrop" type="ColorRect" parent="UI/CenterContainer"]
margin_right = 1024.0
margin_bottom = 576.0
rect_min_size = Vector2( 1024, 576 )
mouse_filter = 1
color = Color( 0, 0, 0, 0.780392 )

[node name="Box" type="ColorRect" parent="UI/CenterContainer"]
margin_left = 262.0
margin_top = 88.0
margin_right = 762.0
margin_bottom = 488.0
rect_min_size = Vector2( 500, 400 )
mouse_filter = 1
color = Color( 0, 0, 0, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="UI/CenterContainer"]
margin_left = 358.0
margin_top = 117.0
margin_right = 665.0
margin_bottom = 459.0

[node name="Label" type="Label" parent="UI/CenterContainer/VBoxContainer"]
margin_right = 307.0
margin_bottom = 14.0
rect_min_size = Vector2( 307, 14 )
rect_pivot_offset = Vector2( 154, 300 )
text = "Type out a list of waves in order (Case matters!):"

[node name="WaveSet" type="TextEdit" parent="UI/CenterContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 307.0
margin_bottom = 318.0
rect_min_size = Vector2( 307, 300 )
caret_block_mode = true
caret_blink = true
caret_moving_by_right_click = false

[node name="Submit" type="Button" parent="UI/CenterContainer/VBoxContainer"]
margin_top = 322.0
margin_right = 307.0
margin_bottom = 342.0
text = "Generate Waveset"

[node name="CancelButton" type="Button" parent="UI"]
visible = false
margin_left = 702.0
margin_top = 88.0
margin_right = 762.0
margin_bottom = 148.0
rect_min_size = Vector2( 60, 60 )
icon = ExtResource( 5 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}
